src/object/internal/snapshots/unrealin__object__internal__script__tests__snapshot_context.snap
---
source: src/object/internal/script.rs
expression: tree
---
[
    Token(
        Context,
    ),
    Token(
        SelfObj,
    ),
    Word(
        4660,
    ),
    Byte(
        5,
    ),
    Token(
        IntZero,
    ),
]
