src/object/internal/snapshots/unrealin__object__internal__script__tests__snapshot_debug_info_direct.snap
---
source: src/object/internal/script.rs
expression: tree
---
[
    Token(
        DebugInfo,
    ),
    Int(
        100,
    ),
    Int(
        42,
    ),
    Int(
        7,
    ),
    Byte(
        171,
    ),
]
