src/object/internal/snapshots/unrealin__object__internal__script__tests__snapshot_dyn_array_modify.snap
---
source: src/object/internal/script.rs
expression: tree
---
[
    Token(
        DynArrayInsert,
    ),
    Token(
        LocalVariable,
    ),
    Object(
        0,
    ),
    Token(
        IntZero,
    ),
    Token(
        IntOne,
    ),
    Token(
        DynArrayRemove,
    ),
    Token(
        LocalVariable,
    ),
    Object(
        0,
    ),
    Token(
        IntZero,
    ),
    Token(
        IntOne,
    ),
]
