src/object/internal/snapshots/unrealin__object__internal__script__tests__snapshot_iterator.snap
---
source: src/object/internal/script.rs
expression: tree
---
[
    Token(
        Iterator,
    ),
    Token(
        SelfObj,
    ),
    Word(
        66,
    ),
]
