src/object/internal/snapshots/unrealin__object__internal__script__tests__snapshot_label_table.snap
---
source: src/object/internal/script.rs
expression: tree
---
[
    Token(
        LabelTable,
    ),
    Name(
        0,
    ),
    Int(
        42,
    ),
]
