src/object/internal/snapshots/unrealin__object__internal__script__tests__snapshot_let_family.snap
---
source: src/object/internal/script.rs
expression: tree
---
[
    Token(
        Let,
    ),
    Token(
        LocalVariable,
    ),
    Object(
        0,
    ),
    Token(
        IntZero,
    ),
    Token(
        LetBool,
    ),
    Token(
        LocalVariable,
    ),
    Object(
        0,
    ),
    Token(
        True,
    ),
    Token(
        LetDelegate,
    ),
    Token(
        LocalVariable,
    ),
    Object(
        0,
    ),
    Token(
        NoObject,
    ),
]
