src/object/internal/snapshots/unrealin__object__internal__script__tests__snapshot_name_refs.snap
---
source: src/object/internal/script.rs
expression: tree
---
[
    Token(
        NameConst,
    ),
    Name(
        0,
    ),
    Token(
        DelegateProperty,
    ),
    Name(
        0,
    ),
]
