src/object/internal/snapshots/unrealin__object__internal__script__tests__snapshot_new.snap
---
source: src/object/internal/script.rs
expression: tree
---
[
    Token(
        New,
    ),
    Token(
        SelfObj,
    ),
    Token(
        NoObject,
    ),
    Token(
        ObjectConst,
    ),
    Object(
        0,
    ),
    Token(
        NoObject,
    ),
]
