src/object/internal/snapshots/unrealin__object__internal__script__tests__snapshot_object_refs.snap
---
source: src/object/internal/script.rs
expression: tree
---
[
    Token(
        LocalVariable,
    ),
    Object(
        0,
    ),
    Token(
        InstanceVariable,
    ),
    Object(
        0,
    ),
    Token(
        DefaultVariable,
    ),
    Object(
        0,
    ),
    Token(
        ObjectConst,
    ),
    Object(
        0,
    ),
    Token(
        NativeParm,
    ),
    Object(
        0,
    ),
    Token(
        MetaCast,
    ),
    Object(
        0,
    ),
    Token(
        SelfObj,
    ),
    Token(
        DynamicCast,
    ),
    Object(
        0,
    ),
    Token(
        NoObject,
    ),
    Token(
        StructMember,
    ),
    Object(
        0,
    ),
    Token(
        SelfObj,
    ),
    Token(
        StructCmpEq,
    ),
    Object(
        0,
    ),
    Token(
        SelfObj,
    ),
    Token(
        SelfObj,
    ),
    Token(
        DelegateFunction,
    ),
    Object(
        0,
    ),
    Name(
        0,
    ),
]
