src/object/internal/snapshots/unrealin__object__internal__script__tests__snapshot_primitive_cast.snap
---
source: src/object/internal/script.rs
expression: tree
---
[
    Token(
        PrimitiveCast,
    ),
    Byte(
        3,
    ),
    Token(
        IntZero,
    ),
]
