src/object/internal/snapshots/unrealin__object__internal__script__tests__snapshot_primitive_consts.snap
---
source: src/object/internal/script.rs
expression: tree
---
[
    Token(
        IntConst,
    ),
    Int(
        305419896,
    ),
    Token(
        FloatConst,
    ),
    Float(
        1.5,
    ),
    Token(
        ByteConst,
    ),
    Byte(
        171,
    ),
    Token(
        IntConstByte,
    ),
    Byte(
        127,
    ),
]
